2002-04-01  Neal H Walfield  <neal@cs.uml.edu>

	* pager.c (diskfs_grow): Fix inverted logic.

2001-11-20  Neal H Walfield  <neal@cs.uml.edu>

        * pager.c (MAX_FREE_PAGE_BUFS): Remove obsolete macro.
        (FREE_PAGE_BUFS): New macro.

        (free_page_bufs_lock): Make this global variable local to
        get_page_buf.
        (free_page_bufs): Likewise.
        (num_free_page_bufs): Likewise.

        (get_page_buf): Reimplement using a new caching algorithm
        based on preallocation of COW zero pages.
        (free_page_buf): Likewise.

        (find_block): Documentation fixes.
	
2002-03-11  Roland McGrath  <roland@frob.com>

	* Makefile (ext2fs.static): Depend on
	$(boot-store-types:%=../libstore/libstore_%.a).

2002-01-03  Roland McGrath  <roland@frob.com>

	* inode.c (write_node): Never clear i_translator here.
	That is only done by diskfs_set_translator.

2001-11-21  Roland McGrath  <roland@frob.com>

	* inode.c (read_node): Just always call getpid for the fsid value.

2001-08-17  Marcus Brinkmann  <marcus@gnu.org>

	* ialloc.c (diskfs_alloc_node): Remove warnings about stale
	nonzero st_blocks or st_size.

2001-08-16  Roland McGrath  <roland@frob.com>

	* inode.c (write_node): Leave i_size, i_blocks, i_translator unchanged
	when the inode has been deleted.  Suggested by Marcus Brinkmann.

	* dir.c (diskfs_dirremove_hard): Remove redundant DP->dn_set_mtime set.
	Noticed by Marcus Brinkmann.

2001-08-09  Roland McGrath  <roland@frob.com>

	* inode.c (diskfs_get_translator): Fail with EFTYPE if the length
	field stored on disk is unreasonable.  Don't crash on ENOMEM.
	Use memcpy instead of bcopy.

2001-06-09  Mark Kettenis  <kettenis@gnu.org>

	* inode.c (diskfs_set_statfs): If number of free blocks is less
	than the number of reserved blocks, set the number of available
	blocks to 0.

2001-03-03  Roland McGrath  <roland@frob.com>

	* hyper.c (zeroblock, modified_global_blocks): Remove superfluous
	zero initializers.